objects/smagicinteract__Scheduled_SMS__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Scheduled SMSs</relationshipLabel>
        <relationshipName>Scheduled_SMSs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SenderId__c</fullName>
        <label>SenderId</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smagicinteract__MobilePhone__c</fullName>
        <label>MobilePhone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>smagicinteract__ObjectId__c</fullName>
        <label>ObjectId</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smagicinteract__Object_Type__c</fullName>
        <label>Object Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smagicinteract__Scheduled_Date__c</fullName>
        <label>Scheduled Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>smagicinteract__jobId__c</fullName>
        <label>jobId</label>
        <length>200</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smagicinteract__smsText__c</fullName>
        <label>smsText</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>smagicinteract__status__c</fullName>
        <defaultValue>&quot;active&quot;</defaultValue>
        <label>status</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Scheduled SMS</label>
    <listViews>
        <fullName>Amy_SMS_Check</fullName>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>smagicinteract__Scheduled_Date__c</columns>
        <columns>smagicinteract__smsText__c</columns>
        <columns>smagicinteract__status__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OWNER.ALIAS</field>
            <operation>equals</operation>
            <value>OAwos</value>
        </filters>
        <label>Amy SMS Check</label>
    </listViews>
    <listViews>
        <fullName>Andy_SMS_Check</fullName>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>smagicinteract__Scheduled_Date__c</columns>
        <columns>smagicinteract__smsText__c</columns>
        <columns>smagicinteract__status__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OWNER.ALIAS</field>
            <operation>equals</operation>
            <value>acumm</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>9/27/2012 12:00 AM</value>
        </filters>
        <label>Andy SMS Check</label>
    </listViews>
    <listViews>
        <fullName>Chowa_SMS_Check</fullName>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>smagicinteract__Scheduled_Date__c</columns>
        <columns>smagicinteract__smsText__c</columns>
        <columns>smagicinteract__status__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OWNER.ALIAS</field>
            <operation>equals</operation>
            <value>chowa</value>
        </filters>
        <filters>
            <field>LAST_UPDATE</field>
            <operation>equals</operation>
            <value>9/20/2012 12:00 AM</value>
        </filters>
        <label>Chowa SMS Check</label>
    </listViews>
    <listViews>
        <fullName>Gem_SMS_Check</fullName>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>smagicinteract__Scheduled_Date__c</columns>
        <columns>smagicinteract__smsText__c</columns>
        <columns>smagicinteract__status__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OWNER.ALIAS</field>
            <operation>equals</operation>
            <value>ghall</value>
        </filters>
        <filters>
            <field>LAST_UPDATE</field>
            <operation>equals</operation>
            <value>7/31/2014 12:00 AM</value>
        </filters>
        <label>Gem SMS Check</label>
    </listViews>
    <listViews>
        <fullName>Gem_SMS_Check_THANKS</fullName>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>smagicinteract__Scheduled_Date__c</columns>
        <columns>smagicinteract__smsText__c</columns>
        <columns>smagicinteract__MobilePhone__c</columns>
        <columns>smagicinteract__status__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>smagicinteract__Scheduled_Date__c</field>
            <operation>equals</operation>
            <value>10/24/2014</value>
        </filters>
        <label>Gem SMS Check - THANKS!</label>
    </listViews>
    <listViews>
        <fullName>Gemma_SMS_Check_2</fullName>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>smagicinteract__Scheduled_Date__c</columns>
        <columns>smagicinteract__smsText__c</columns>
        <columns>smagicinteract__status__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OWNER.ALIAS</field>
            <operation>equals</operation>
            <value>ghall</value>
        </filters>
        <filters>
            <field>smagicinteract__Scheduled_Date__c</field>
            <operation>equals</operation>
            <value>9/28/2012</value>
        </filters>
        <label>Gemma SMS Check 2</label>
    </listViews>
    <listViews>
        <fullName>KO_SMS</fullName>
        <columns>Contact__c</columns>
        <columns>smagicinteract__smsText__c</columns>
        <columns>smagicinteract__Scheduled_Date__c</columns>
        <columns>smagicinteract__status__c</columns>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>OBJECT_ID</columns>
        <columns>smagicinteract__MobilePhone__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>smagicinteract__Scheduled_Date__c</field>
            <operation>greaterThan</operation>
            <value>1/1/2013</value>
        </filters>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>equals</operation>
            <value>Matthew Whittaker</value>
        </filters>
        <label>KO SMS</label>
        <sharedTo>
            <group>Central_Comms</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Lydia_SMS_Check</fullName>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>smagicinteract__Scheduled_Date__c</columns>
        <columns>smagicinteract__smsText__c</columns>
        <columns>smagicinteract__status__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>11/6/2014 12:00 AM</value>
        </filters>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>contains</operation>
            <value>Lydia</value>
        </filters>
        <label>Lydia SMS Check</label>
    </listViews>
    <listViews>
        <fullName>MW_SMS_Check</fullName>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>smagicinteract__Scheduled_Date__c</columns>
        <columns>smagicinteract__smsText__c</columns>
        <columns>smagicinteract__status__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>11/21/2013 12:00 AM</value>
        </filters>
        <filters>
            <field>CREATEDBY_USER.ALIAS</field>
            <operation>contains</operation>
            <value>mwhit</value>
        </filters>
        <label>MW SMS Check</label>
    </listViews>
    <listViews>
        <fullName>Matt_SMS_Check</fullName>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>smagicinteract__Scheduled_Date__c</columns>
        <columns>smagicinteract__smsText__c</columns>
        <columns>smagicinteract__status__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OWNER.ALIAS</field>
            <operation>equals</operation>
            <value>mdola</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>9/27/2012 12:00 AM</value>
        </filters>
        <label>Matt SMS Check</label>
    </listViews>
    <listViews>
        <fullName>Red_Card_Deletions</fullName>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>smagicinteract__Scheduled_Date__c</columns>
        <columns>smagicinteract__smsText__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Contact__c</field>
            <operation>equals</operation>
            <value>Roche Smith</value>
        </filters>
        <label>Red Card Deletions</label>
    </listViews>
    <listViews>
        <fullName>SMS_on_22_June_2013</fullName>
        <columns>NAME</columns>
        <columns>smagicinteract__status__c</columns>
        <columns>smagicinteract__Scheduled_Date__c</columns>
        <columns>smagicinteract__smsText__c</columns>
        <columns>Contact__c</columns>
        <columns>SenderId__c</columns>
        <columns>smagicinteract__MobilePhone__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>smagicinteract__Object_Type__c</columns>
        <columns>smagicinteract__jobId__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>smagicinteract__Scheduled_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>6/22/2013</value>
        </filters>
        <filters>
            <field>smagicinteract__Scheduled_Date__c</field>
            <operation>lessThan</operation>
            <value>6/23/2013</value>
        </filters>
        <label>SMS on 22 June 2013</label>
    </listViews>
    <listViews>
        <fullName>Sidra_SMS_Check</fullName>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>smagicinteract__Scheduled_Date__c</columns>
        <columns>smagicinteract__smsText__c</columns>
        <columns>smagicinteract__MobilePhone__c</columns>
        <columns>smagicinteract__status__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>smagicinteract__Scheduled_Date__c</field>
            <operation>equals</operation>
            <value>10/23/2014</value>
        </filters>
        <filters>
            <field>CREATEDBY_USER.ALIAS</field>
            <operation>contains</operation>
            <value>jlunt</value>
        </filters>
        <label>Sidra SMS Check</label>
    </listViews>
    <listViews>
        <fullName>Sidra_SMS_GEM_a8</fullName>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>smagicinteract__Scheduled_Date__c</columns>
        <columns>smagicinteract__smsText__c</columns>
        <columns>smagicinteract__MobilePhone__c</columns>
        <columns>smagicinteract__status__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>smagicinteract__Scheduled_Date__c</field>
            <operation>equals</operation>
            <value>9/12/2014</value>
        </filters>
        <filters>
            <field>CREATEDBY_USER.ALIAS</field>
            <operation>contains</operation>
            <value>lunt</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>9/10/2014 12:00 AM</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>greaterThan</operation>
            <value>SS-0239182</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>lessThan</operation>
            <value>SS-0239240</value>
        </filters>
        <label>Sidra SMS GEM a8</label>
    </listViews>
    <listViews>
        <fullName>This_Year_2015</fullName>
        <columns>NAME</columns>
        <columns>smagicinteract__status__c</columns>
        <columns>smagicinteract__Scheduled_Date__c</columns>
        <columns>SenderId__c</columns>
        <columns>smagicinteract__smsText__c</columns>
        <columns>smagicinteract__MobilePhone__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>smagicinteract__status__c</field>
            <operation>equals</operation>
            <value>schedule</value>
        </filters>
        <label>This Year 2015</label>
    </listViews>
    <nameField>
        <displayFormat>SS-{0000000}</displayFormat>
        <label>Scheduled SMS Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Scheduled SMSs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>